fix display position shift caused by scrollbars (#973)

--- a/src/wwwroot/css/genpage.css
+++ b/src/wwwroot/css/genpage.css
@@ -405,6 +405,7 @@ body {
     width: 19.5rem;
     height: 10rem;
     overflow: hidden;
+    scrollbar-gutter: stable;
     display: inline-block;
     white-space: normal;
     word-break: normal;
